<?xml version="1.0"?>
<package>
  <name>dynamicvoronoi</name>
  <version>0.0.0</version>
  <description>

<p>
This stack provides software to compute and update Euclidean distance maps (DM) and Euclidean Voronoi diagrams (GVD) on 2D grid maps.
</p>

<p>
The program is initialized with a binary occupancy grid map and computes the corresponding DM and GVD. When provided with points that mark newly occupied or freed cells, the DM and GVD can be updated efficiently to reflect the changes in the environment.
</p>

<p>
Details on the algorithms can be found in the corresponding paper. Please cite the paper if you use it for scientific work:<br />
B. Lau, C. Sprunk and W. Burgard, Improved Updating of Euclidean Distance Maps and Voronoi Diagrams, IEEE Intl. Conf. on Intelligent Robots and Systems (IROS), Taipei, Taiwan, 2010.<br />
See also <a href="http://www.informatik.uni-freiburg.de/~lau/dynamicvoronoi">http://www.informatik.uni-freiburg.de/~lau/dynamicvoronoi</a>
</p>

  </description>


  <maintainer email="op@todo.todo">op</maintainer>
  <author>Boris Lau, Christoph Sprunk, Wolfram Burgard</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>

</package>
